force-app/main/default/objects/Census_Reimagine_POC__c/Census_Reimagine_POC__c.object-meta.xml
<CustomObject>
    <description>Contains information for the E2E Reimagine POC related to Group (Account) demographic data known as &quot;census&quot;.  This data can change periodically as the group profile changes</description>
    <label>Census</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Census Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Census</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>