force-app/main/default/objects/Census_Reimagine_POC__c/fields/Active_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Member_Count__c</fullName>
    <label>Active Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>