force-app/main/default/objects/Census_Reimagine_POC__c/fields/Average_age_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Average_age_of_Employees__c</fullName>
    <label>Average age of Employees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>