force-app/main/default/objects/Census_Reimagine_POC__c/fields/Contract_type__c.field-meta.xml
<CustomField>
    <fullName>Contract_type__c</fullName>
    <label>Contract type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Single</fullName>
            </value>
            <value>
                <fullName>2 - Two Person</fullName>
            </value>
            <value>
                <fullName>3 - Family</fullName>
            </value>
            <value>
                <fullName>9 - Employee Child(ren)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>