force-app/main/default/objects/Census_Reimagine_POC__c/fields/Current_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Current_As_Of__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The census is current as of this date</inlineHelpText>
    <label>Current As Of</label>
    <type>Date</type>
</CustomField>