force-app/main/default/objects/Census_Reimagine_POC__c/fields/Employee_active__c.field-meta.xml
<CustomField>
    <fullName>Employee_active__c</fullName>
    <label>Employee active</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>