force-app/main/default/objects/Census_Reimagine_POC__c/fields/Employee_Age_Ranges__c.field-meta.xml
<CustomField>
    <fullName>Employee_Age_Ranges__c</fullName>
    <label>Employee Age Ranges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 30</fullName>
            </value>
            <value>
                <fullName>30 - 39</fullName>
            </value>
            <value>
                <fullName>40 - 44</fullName>
            </value>
            <value>
                <fullName>45 - 49</fullName>
            </value>
            <value>
                <fullName>50 - 54</fullName>
            </value>
            <value>
                <fullName>55 - 59</fullName>
            </value>
            <value>
                <fullName>60 - 64</fullName>
            </value>
            <value>
                <fullName>65 - 69</fullName>
            </value>
            <value>
                <fullName>70 - 74</fullName>
            </value>
            <value>
                <fullName>75+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>