force-app/main/default/objects/Census_Reimagine_POC__c/fields/Employee_Cobra__c.field-meta.xml
<CustomField>
    <fullName>Employee_Cobra__c</fullName>
    <label>Employee Cobra</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>