force-app/main/default/objects/Census_Reimagine_POC__c/fields/Employee_with_dependents__c.field-meta.xml
<CustomField>
    <fullName>Employee_with_dependents__c</fullName>
    <label>Employee with dependents</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>