force-app/main/default/objects/Census_Reimagine_POC__c/fields/employeeChildrenPMPM__c.field-meta.xml
<CustomField>
    <fullName>employeeChildrenPMPM__c</fullName>
    <label>Employee Children PMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>