force-app/main/default/objects/Census_Reimagine_POC__c/fields/employeeSpousePMPM__c.field-meta.xml
<CustomField>
    <fullName>employeeSpousePMPM__c</fullName>
    <label>Employee Spouse PMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>