force-app/main/default/objects/Census_Reimagine_POC__c/fields/familyPMPM__c.field-meta.xml
<CustomField>
    <fullName>familyPMPM__c</fullName>
    <label>Family PMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>