force-app/main/default/objects/Census_Reimagine_POC__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>