force-app/main/default/objects/Census_Reimagine_POC__c/fields/indvidualPMPM__c.field-meta.xml
<CustomField>
    <fullName>indvidualPMPM__c</fullName>
    <label>Individual PMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>