force-app/main/default/objects/Census_Reimagine_POC__c/fields/inputTier__c.field-meta.xml
<CustomField>
    <fullName>inputTier__c</fullName>
    <label>inputTier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>