force-app/main/default/objects/Census_Reimagine_POC__c/fields/Number_below_20__c.field-meta.xml
<CustomField>
    <fullName>Number_below_20__c</fullName>
    <label>Number below 20</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>