force-app/main/default/objects/Census_Reimagine_POC__c/fields/Number_Between_21_30__c.field-meta.xml
<CustomField>
    <fullName>Number_Between_21_30__c</fullName>
    <label>Number Between 21-30</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>