force-app/main/default/objects/Census_Reimagine_POC__c/fields/Number_between_31_40__c.field-meta.xml
<CustomField>
    <fullName>Number_between_31_40__c</fullName>
    <label>Number between 31-40</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>