force-app/main/default/objects/Census_Reimagine_POC__c/fields/Number_between_41_50__c.field-meta.xml
<CustomField>
    <fullName>Number_between_41_50__c</fullName>
    <label>Number between 41-50</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>