force-app/main/default/objects/Census_Reimagine_POC__c/fields/Number_Employee_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Number_Employee_Spouse__c</fullName>
    <label>Number Employee + Spouse</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>