force-app/main/default/objects/Census_Reimagine_POC__c/fields/Number_of_Female__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Female__c</fullName>
    <label>Number of Female</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>