force-app/main/default/objects/Census_Reimagine_POC__c/fields/Number_over_60__c.field-meta.xml
<CustomField>
    <fullName>Number_over_60__c</fullName>
    <label>Number over 60</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>