force-app/main/default/objects/Census_Reimagine_POC__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XXX_Opportunity_DELETE</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Census</relationshipLabel>
    <relationshipName>Census</relationshipName>
    <type>Lookup</type>
</CustomField>