force-app/main/default/objects/Census_Reimagine_POC__c/fields/outputTier__c.field-meta.xml
<CustomField>
    <fullName>outputTier__c</fullName>
    <label>outputTier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>