force-app/main/default/objects/Census_Reimagine_POC__c/fields/participationRate__c.field-meta.xml
<CustomField>
    <fullName>participationRate__c</fullName>
    <label>participationRate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>