force-app/main/default/objects/Census_Reimagine_POC__c/fields/Total_Average_Age__c.field-meta.xml
<CustomField>
    <fullName>Total_Average_Age__c</fullName>
    <label>Total Average Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>